tree-sitter-usfm3/grammar.js
    bookcode: $ => /\w{3}/,
     // bookcode: $ => choice("GEN", "EXO", "LEV", "NUM", "DEU", "JOS", "JDG",
     //          "RUT", "1SA", "2SA", "1KI", "2KI", 
     //          "1CH", "2CH", "EZR", "NEH", "EST", "JOB", "PSA", "PRO", 
     //          "ECC", "SNG", "ISA", "JER", "LAM", "EZK", "DAN", 
     //          "HOS", "JOL", "AMO", "OBA", "JON", "MIC", "NAM", "HAB", 
     //          "ZEP", "HAG", "ZEC", "MAL", "MAT", "MRK", "LUK", 
     //          "JHN", "ACT", "ROM", "1CO", "2CO", "GAL", "EPH", "PHP", 
     //          "COL", "1TH", "2TH", "1TI", "2TI", "TIT", "PHM", 
     //          "HEB", "JAS", "1PE", "2PE", "1JN", "2JN", "3JN", "JUD", 
     //          "REV", "TOB", "JDT", "ESG", "WIS", "SIR", "BAR", 
     //          "LJE", "S3Y", "SUS", "BEL", "1MA", "2MA", "3MA", "4MA", 
     //          "1ES", "2ES", "MAN", "PS2", "ODA", "PSS", "EZA", 
     //          "5EZ", "6EZ", "DAG", "PS3", "2BA", "LBA", "JUB", "ENO", 
     //          "1MQ", "2MQ", "3MQ", "REP", "4BA", "LAO", "FRT", 
     //          "BAK", "OTH", "INT", "CNC", "GLO", "TDX", "NDX", "TOB",
     //          "JDT", "ESG", "WIS", "SIR", "BAR", "LJE", "S3Y", 
     //          "SUS", "BEL", "1MA", "2MA", "3MA", "4MA", "1ES", "2ES", 
     //          "MAN", "PS2", "ODA", "PSS", "EZA", "5EZ", "6EZ", 
     //          "DAG", "PS3", "2BA", "LBA", "JUB", "ENO", "1MQ", "2MQ", 
     //          "3MQ", "REP", "4BA", "LAO", "FRT", "BAK", "OTH", 
     //          "INT", "CNC", "GLO", "TDX", "NDX", "XXA", "XXB", "XXC", 
     //          "XXD", "XXE", "XXF", "XXG"),
    text: $ => /[^\\\|]+/,
    _text: $ => /[^\\\|]+/,
    _spaceOrLine: $ => /[\s\n\r]/,

    // File Identification
    book: $ => $.id, //only at start of file
    description: $ => $._text,
    id: $ => prec.right(0, seq("\\id ", $.bookcode, optional($.description))),

    //numbered marker levels
    numberedLevelMax3: $ => token.immediate(/[123]/),
    numberedLevelMax4: $ => token.immediate(/[1234]/),
    versionNumber: $ => /\d+(\.\d+)?/,

    _headingText: $ => repeat1(choice($.text,
      $._characterMarker,
      $.ref,
      $.footnote,
      $.crossref,
      $.fig,
      )),


    usfm: $ => seq("\\usfm ", $.versionNumber),
    ide: $ => seq("\\ide ", $.text),
    hBlock: $ => prec.right(0,repeat1($.h)),
    tocBlock: $ => prec.right(0,repeat1($.toc)),
    h: $ => prec.right(0,seq($.hTag, $._headingText)),
    hTag: $ => seq("\\h",optional($.numberedLevelMaxAny), " "),
    toc: $ => prec.right(0,seq($.tocTag, $._headingText)),
    tocTag: $ => seq("\\toc",optional($.numberedLevelMax3), " "),
    sts: $ => prec.right(0,seq("\\sts ", repeat1(choice($.text, $._characterMarker)))), // can be present at any position in file, and divides the file into sections from one sts to another.
    rem: $ => prec.right(0, seq("\\rem ", repeat1(choice($.text, $._characterMarker)))), // can be present at any position in file.
    _introText: $ => repeat1(choice($.text, $.iqt,
      $.xt_standalone,
      $._characterMarker,
      $.fig,
      $.ref,
      )),

    imtBlock: $ => prec.right(0,repeat1($.imt)),
    imt: $ => prec.right(0, seq($.imtTag, $._introText)),
    imtTag: $ => seq("\\imt",optional($.numberedLevelMax4), " "),
    imteBlock: $ => prec.right(0,repeat1($.imte)),
    imte: $ => prec.right(0, seq($.imteTag, $._introText)),
    imteTag: $ => seq("\\imte",optional(token.immediate(/[12]/)), " "),
    isBlock: $ => prec.right(0,repeat1($.is)),
    is: $ => prec.right(0, seq($.isTag, $._introText)),
    isTag: $ => seq("\\is",optional(token.immediate(/[12]/)), " "),
    io: $ => prec.right(0, seq($.ioTag, $._introText, optional($.ior))),
    ioTag: $ => seq("\\io",optional($.numberedLevelMax4), " "),
    ior: $ => seq("\\ior ", $.text, "\\ior*"),
    iot: $ => prec.right(0, seq("\\iot ", $._introText)),
    ip: $ => prec.right(0, seq("\\ip ", $._introText)),
    im: $ => prec.right(0, seq("\\im ", $._introText)),
    ipi: $ => prec.right(0, seq("\\ipi ", $._introText)),
    imi: $ => prec.right(0, seq("\\imi ", $._introText)),
    iliBlock: $ => prec.right(0,repeat1($.ili)),
    ili: $ => prec.right(0, seq($.iliTag, $._introText)),
    iliTag: $ => seq("\\ili",optional(token.immediate(/[12]/)), " "),
    ipq: $ => prec.right(0, seq("\\ipq ", $._introText)),
    imq: $ => prec.right(0, seq("\\imq ", $._introText)),
    ipr: $ => prec.right(0, seq("\\ipr ", $._introText)),
    ib: $ => "\\ib",
    iqBlock: $ => prec.right(0,repeat1($.iq)),
    iq: $ => prec.right(0, seq($.iqTag, $._introText)),
    iqTag: $ => seq("\\iq",optional($.numberedLevelMax3), " "),
    ie: $ => "\\ie",
    verseText: $ => prec.right(0, repeat1(choice($.text,
      $._characterMarker, $.fig
      ))),
    v: $ => prec.right(0,seq("\\v ", $.verseNumber, repeat($._verseMeta))),
    verseNumber: $ => /\d+\w?(-\d+\w?)?[\s\n\r]*/,

    _verseMeta: $ => choice(
      $.va,
      $.vp,
    ),
    chapter: $ => prec.right(0,seq(
        optional($.cl),
        $.c,
        repeat($._chapterContent)
      )),
    c: $ => prec.right(0,seq("\\c ", $.chapterNumber, repeat($._chapterMeta))),
    chapterNumber: $ => /\d+/,

    // When vid is independent marker and not attribute in USFM
    _chapterContent: $ => choice(
      $._chapterMeta,
      $.title,
      $.paragraph,
      $._comments,
      $.poetry,
      $.table,
      $.list,
      $.footnote,
      $.pb,
      $.ip,
      $.iex,
      $.milestone,
      $.zNameSpace,
      $.esb,
      $.vid,
    ),

    //chapter meta
    _chapterMeta: $ => choice(
      $.ca,
      $.cp,
      $.cd,
      $.cl
    ),
    mtBlock: $ => prec.right(0,repeat1($.mt)),
    mt: $ => prec.right(0,seq($.mtTag, $._headingText)),
    mtTag: $ => seq("\\mt",optional($.numberedLevelMax4), " "),

    paragraph: $ => choice(
      $.p,
      $.m,
      $.po,
      $.pr,
      $.cls,
      $.pmo,
      $.pm,
      $.pmc,
      $.pmr,
      $.piBlock,
      $.mi,
      $.nb,
      $.pc,
      $.phBlock,
      $.b,
    ),

    _paragraphContent: $ => choice(
      $.v,
      $._verseMeta,
      $.verseText,
      $.footnote, 
      $.crossref,
      $.milestone,
      $.zNameSpace,
      $._comments,
      $.ref,
    ),

    p: $ => prec.right(0, seq("\\p", $._spaceOrLine, repeat($._paragraphContent))),
    m: $ => prec.right(0, seq("\\m", $._spaceOrLine, repeat($._paragraphContent))),
    b: $ => seq("\\b", $._spaceOrLine),

    //quotes
    poetry: $ => prec.right(0, repeat1(choice(
      $.qBlock,
      $.qr,
      $.qc,
      // $.qs,
      // $.qa, //treated as a title
      // $.qac,
      $.qmBlock,
      $.qd,
    ))),

    _poetryContent: $ => choice(
      $._paragraphContent,
      $.qac,
      $.qs,
    ),

    qBlock: $ => prec.right(0, repeat1($.q)),
    q: $ => prec.right(0, seq($.qTag, repeat($._poetryContent))),
    qTag: $ => seq("\\q", optional($.numberedLevelMax4), $._spaceOrLine),
    _characterMarker: $ => choice(
      $.add,
      $.bk,
      $.dc,
      $.k,
      $.nd,
      $.ord,
      $.pn,
      $.png,
      $.addpn,
      $.qt,
      $.sig,
      $.sls,
      $.tl,
      $.wj,
      $.em,
      $.bd,
      $.it,
      $.bdit,
      $.no,
      $.sc,
      $.sup,
      $.ndx,
      $.pro,
      $.rb,
      $.w,
      $.wg,
      $.wh,
      $.wa,
      $.wl,
      $.jmp,
      $.ta,
//      $.fig,
      // $.zNameSpace, makes all zNameSpaces part of paragraph content, like milestones
    ),

    milestoneTag: $=> seq("\\", prec.right(1,token.immediate(/(ts|qte|qts)/))),
    _milestoneStandaloneMarker: $ => seq($.milestoneTag,
      optional($._milestoneAttributes), "\\*" ),

    milestoneStartTag: $ => /\\(t|ts|qt|k)(\d+)?-s/,
    milestoneEndTag: $=> /\\(t|ts|qt|k)(\d+)?-e/,
    _milestoneStart: $ => seq($.milestoneStartTag,
      optional(choice($.defaultAttribute, $._milestoneAttributes)), "\\*" ),
    _milestoneEnd: $ => seq($.milestoneEndTag,
      optional($._milestoneAttributes), "\\*" ),

    /* dont tie up the start and end in the grammar as of now.
    But Do it via querying on the parse tree if required.
    Also checking if the start and end names match, can be done there in post processing
    // _milestonePair: $ => seq($._milestoneStart, repeat($._chapterContent), 
    //   $._milestoneEnd) */


    milestone: $ => choice($._milestoneStart, $._milestoneEnd, $._milestoneStandaloneMarker),

    attributeValue: $ =>  /[^\\\|"=]+/, //same rule as $.text, with quote and '=' added extra

    /* The default attribute is valid for any marker which normally provide attributes. 
      It would be extracted as default attribute without mentioning the corresponding attribute name */

    msAttribute: $ => seq($.milestoneAttributeName, "=", '"', optional($.attributeValue), '"'),
    milestoneAttributeName: $ => choice("sid", "eid", "who"),
